# patent_classifier

./: Cargo.toml  README.md
dataset/: train.csv  validate.csv
src/: batcher.rs  config.rs  data.rs  main.rs  model.rs
src/data_prep/: data.rs
