[package]
name = "patent_classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
burn = { version = "0.13.2", features = ["dataset", "train", "wgpu"] }
csv = "1.3.0"
derive-new = "0.6.0"
serde = { version = "1.0.204", features = ["derive"] }
tokenizers = { version = "0.19.1", default-features = false, features = [
  "onig",
  "http",
]}